--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,8 +36,9 @@ fuzzy-matcher = "0.3.7"
 rayon = "1.5.3"
 derive_builder = "0.12.0"
 bitflags = "1.3.2"
-timer = "0.2.0"
-chrono = "0.4.22"
+# timer = "0.2.0"
+timer = { git = "https://github.com/Yoric/timer.rs", rev = "4ba32a90432c50224d5a2c447cb213e8432b10a8" }
+chrono = { version = "0.4.22", default-features = false }
 crossbeam = "0.8.2"
 beef = "0.5.2" # compact cow
 defer-drop = "1.2.0"
